--- a/WebVisualizations/style.css
+++ b/WebVisualizations/style.css
@@ -38,12 +38,20 @@ body {
 h1, h2, h3{
   font-family: Georgia, 'Times New Roman', Times, serif;
   color: rgb(20, 150, 150);
+  padding-left: 10px;
 }
 
 h1{
   font-size: 24px;
   font-weight: bold;
   text-align:left;
+}
+
+p{
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 18px;
+  color: rgb(90, 90, 90);
+  padding-left: 10px;
 }
 
 .sel_img {
@@ -62,7 +70,7 @@ h1{
     width: 100%;
     top: 70px;
     right: 0;
-    padding: 5px;
+    padding-left: 10px;
     color: white;
   }
   .nav-item a{
